{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 48,
  "lineage": "80645056-1f73-c18e-9727-438f98c987f7",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sampleapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:loadbalancer/app/sampleapp-alb-staging/17e556fa10f92e72",
            "arn_suffix": "app/sampleapp-alb-staging/17e556fa10f92e72",
            "dns_name": "sampleapp-alb-staging-1322437423.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:loadbalancer/app/sampleapp-alb-staging/17e556fa10f92e72",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sampleapp-alb-staging",
            "security_groups": [
              "sg-052f10d190451f76b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1e327544"
              },
              {
                "subnet_id": "subnet-37dbe151"
              }
            ],
            "subnets": [
              "subnet-1e327544",
              "subnet-37dbe151"
            ],
            "tags": {
              "Environment": "staging"
            },
            "vpc_id": "vpc-855f96fc",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:listener/app/sampleapp-alb-staging/17e556fa10f92e72/199afd577a4c9708",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:targetgroup/sampleapp-http-tg-staging/9a82faa23f563527",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:listener/app/sampleapp-alb-staging/17e556fa10f92e72/199afd577a4c9708",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:loadbalancer/app/sampleapp-alb-staging/17e556fa10f92e72",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.loadbalancer_module.aws_lb.sampleapp_alb",
            "module.loadbalancer_module.aws_lb_target_group.sampleapp_http_tg",
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sampleapp_http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:targetgroup/sampleapp-http-tg-staging/9a82faa23f563527",
            "arn_suffix": "targetgroup/sampleapp-http-tg-staging/9a82faa23f563527",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/icons/apache_pb2.gif",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050861853942:targetgroup/sampleapp-http-tg-staging/9a82faa23f563527",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sampleapp-http-tg-staging",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-855f96fc"
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050861853942:security-group/sg-0830f04f9af5f550b",
            "description": "privatesg for EC2 staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0830f04f9af5f550b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052f10d190451f76b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "privatesg_staging",
            "name_prefix": "",
            "owner_id": "050861853942",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-855f96fc"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050861853942:security-group/sg-052f10d190451f76b",
            "description": "publicsg for ELB staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-052f10d190451f76b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicsg_staging",
            "name_prefix": "",
            "owner_id": "050861853942",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-855f96fc"
          }
        }
      ]
    }
  ]
}